--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -777,8 +777,32 @@ footer:hover{
 #menu-offers .borders {
     padding: 10px;
 }
+#menu-offers .col-6 {
+    padding-right: 0px;
+    padding-left: 20px;
+}
+#menu-offers .col-2{
+    
+}
+#mobile {
+    height: 155%;
+}
+#mobile .col-md-6{
+    margin-top: 200px;
+}
+#mobile #btn-1,#btn-2{
+    width: 70%;
+     margin:0px;
+    margin: 30px auto;
+}
+#mobile #btn-2{
+    margin: 0px auto;
+}
 #nature .borders .btn {
     margin-top: -45px;
+}
+#nature h6 {
+    margin-right: 150px;
 }
     #menu .upper-menu {
         margin-left: 170px;
@@ -788,6 +812,33 @@ footer:hover{
         margin-left: 0px;
     }
     #latest {
-        margin-top: 550px;
+        margin-top: 100px;
+        text-align: start;
+    }
+    #book-now {
+        margin-top: -110px;
+    }
+    #book-now .container-fluid {
+        padding: 10px;
+        
+    }
+    #book-now .media img {
+        background-color: white;
+        padding: 15px;
+        border-radius: 20px;
+        width: 25%;
+    }
+    #book-now .media p {
+        margin-right: 10px;
+        margin-bottom: 0px;
+    }
+    #book-now #table {
+        margin-top: 100px;
+    }
+    #footer-logos {
+        padding-top: 410px;
+    }
+    #nature img {
+        width: 40%;
     }
 }
